[CTW] Broken tables in Google Calendar
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox114 | --- | unaffected |
| firefox115 | --- | verified |
| firefox116 | --- | verified |
People
(Reporter: Jamie, Assigned: morgan)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Reported to me via Mastodon direct message:
I'm seeing some strange behaviour with Firefox 115.0 beta with tables. On the schedule view of google calendar, it now reads the events as a table of 40 rows and 1 columns, but it shows up correctly as multiple columns on another machine with the same version of NVDA but stable Firefox.
This is fixed in Nightly (116). However, the fixes are in bug 1832261and bug 1832228, which are very large patches and too risky to uplift.
This also occurs in Facebook Messenger.
This regression was introduced by bug 1828373 and bug 1825611, which introduce additional generics into the a11y tree. Those generics are needed for hit testing fixes, but those hit testing fixes aren't complete in 115 anyway.
Given all of this, we want to back out bug 1828373 and bug 1825611 from 115, but not central.
| Reporter | ||
Updated•2 years ago
|
| Assignee | ||
Comment 1•2 years ago
|
||
D175193
D175194
D175195
D175196
D176202
D176093
Updated•2 years ago
|
Updated•2 years ago
|
Comment 2•2 years ago
|
||
fixed in 115 beta for 115.0rc1 by backout of bug 1828373 and bug 1825611
https://hg.mozilla.org/releases/mozilla-beta/rev/3b9f2c4be4f6e4271c11c1d4407eae55196c950d
Updated•2 years ago
|
Updated•2 years ago
|
Comment 3•2 years ago
|
||
This issue is Verified as fixed in our latest Nightly build as well as our latest RC 115.0.
Description
•