Bug 1840200: Backout changesets at bug 1825611 and bug 1828373 r?Jamie, a=backout

D175193
***
D175194
***
D175195
***
D175196
***
D176202
***
D176093

Differential Revision: https://phabricator.services.mozilla.com/D181924