accessible/base/nsAccessibilityService.cpp
@@ -189,19 +189,8 @@ static bool AttributesMustBeAccessible(nsIContent* aContent,
  */
 static bool MustBeGenericAccessible(nsIContent* aContent,
                                     DocAccessible* aDocument) {
-  if (aContent->IsInNativeAnonymousSubtree() || aContent->IsSVGElement()) {
-    // We should not force create accs for anonymous content.
-    // This is an issue for inputs, which have an intermediate
-    // container with relevant overflow styling between the input
-    // and its internal input content.
-    // We should also avoid this for SVG elements (ie. `<foreignobject>`s
-    // which have default overflow:hidden styling).
-    return false;
-  }
   nsIFrame* frame = aContent->GetPrimaryFrame();
   MOZ_ASSERT(frame);
-  nsAutoCString overflow;
-  frame->Style()->GetComputedPropertyValue(eCSSProperty_overflow, overflow);
   // If the frame has been transformed, and the content has any children, we
   // should create an Accessible so that we can account for the transform when
   // calculating the Accessible's bounds using the parent process cache.
@@ -214,9 +203,7 @@ static bool MustBeGenericAccessible(nsIContent* aContent,
          ((aContent->HasChildren() && frame->IsTransformed()) ||
           frame->IsStickyPositioned() ||
           (frame->StyleDisplay()->mPosition == StylePositionProperty::Fixed &&
-           nsLayoutUtils::IsReallyFixedPos(frame)) ||
-          overflow.Equals("auto"_ns) || overflow.Equals("scroll"_ns) ||
-          overflow.Equals("hidden"_ns));
+           nsLayoutUtils::IsReallyFixedPos(frame)));
 }
 
 /**
@@ -530,14 +517,12 @@ void nsAccessibilityService::NotifyOfComputedStyleChange(
     // If the content has children and its frame has a transform, create an
     // Accessible so that we can account for the transform when calculating
     // the Accessible's bounds using the parent process cache. Ditto for
-    // position: fixed/sticky and content with overflow styling (hidden, auto,
-    // scroll)
+    // position: fixed/sticky.
     if (const nsIFrame* frame = aContent->GetPrimaryFrame()) {
       const auto& disp = *frame->StyleDisplay();
       if (disp.HasTransform(frame) ||
           disp.mPosition == StylePositionProperty::Fixed ||
-          disp.mPosition == StylePositionProperty::Sticky ||
-          disp.IsScrollableOverflow()) {
+          disp.mPosition == StylePositionProperty::Sticky) {
         document->ContentInserted(aContent, aContent->GetNextSibling());
       }
     }
